Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-32106

mctiming in cbcollect_info does not work

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 6.5.0
    • master
    • memcached
    • None
    • Yes

    Description

      Problem
      While looking at the logs in MB-32081 I notice that the stats.log in cbollect_info was missing some information related to mctimings:

      ==============================================================================
      mctimings []
      ['mctimings', '-u', '@ns_server', '-h', '127.0.0.1:11209', '-v']
      ==============================================================================
      Fatal error: [json.exception.type_error.302] type must be string, but is number
      ==============================================================================
      mctimings ['subdoc_execute']
      ['mctimings', '-u', '@ns_server', '-h', '127.0.0.1:11209', '-v', 'subdoc_execute']
      ==============================================================================
      2018-11-21T00:39:46.587847-08:00 CRITICAL *** Fatal error encountered during exception handling ***
      2018-11-21T00:39:46.587968-08:00 CRITICAL Caught unhandled std::exception-derived exception. what(): to_opcode(): unknown opcode: "subdoc_execute"
      2018-11-21T00:39:46.588112-08:00 CRITICAL Call stack:     /opt/couchbase/bin/../lib/libplatform_so.so.0.1.0(print_backtrace_to_buffer+0x40) [0x7f08a4c97000+0xb3b0]
          mctimings() [0x400000+0x40c8f]
          mctimings() [0x400000+0x40d8a]
          /opt/couchbase/bin/../lib/libstdc++.so.6() [0x7f08a44fd000+0x8ef86]
          /opt/couchbase/bin/../lib/libstdc++.so.6() [0x7f08a44fd000+0x8efd1]
          /opt/couchbase/bin/../lib/libstdc++.so.6() [0x7f08a44fd000+0x8f213]
          mctimings() [0x400000+0x3afb3]
          mctimings() [0x400000+0x8b7c]
          /lib64/libc.so.6(__libc_start_main+0xf5) [0x7f08a3a07000+0x21af5]
          mctimings() [0x400000+0xb12d]
       
      terminate called after throwing an instance of 'std::invalid_argument'
        what():  to_opcode(): unknown opcode: "subdoc_execute"
      

      No thing in the memcached.logs apart from the HELO (twice it seem)

      2018-11-21T18:23:53.983341+00:00 INFO 49: HELO [mcctl 513c3bd2dd554b0294b890427944189b32dda04a] [ 127.0.0.1:34898 - 127.0.0.1:11210 (not authenticated) ]
      2018-11-21T18:23:53.983415+00:00 INFO 49: HELO [mcbp] XERROR [ 127.0.0.1:34898 - 127.0.0.1:11210 (not authenticated) ]
      2018-11-21T18:23:53.988023+00:00 INFO 49: Client 127.0.0.1:34898 authenticated as <ud>Administrator</ud>
      

      Steps to reproduce
      I have not reproduce this myself, will update the steps when I do.

      Logs
      https://s3.amazonaws.com/bugdb/jira/MB-32081/cbcollect1689.zip

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              anitha.kuberan Anitha Kuberan
              pvarley Patrick Varley (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty