MB-32106: Allow for statistics-related mctimings

to_opcode throws an exception if the string can't be mapped
to a string and not the invalid opcode. Catch the exception
and try the stats-related one instead.

Change-Id: I42c62c6c74a1bbf805a9743601b3d4141ea52077
Reviewed-on: http://review.couchbase.org/102024
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>